@@ -1,3 +1,5 @@
+- meklort : Update laoder.h to latest, declare gMI global, Load modules passed in via the multiboot header / first bootloader,
+		Fix mboot.h include, Add ?log command to print out bdmesg without needing Wait=y, Add slightly more debugging for modules.
 - ErmaC : Rename CPU_MODEL_xxx into CPUID_MODEL_xxx follow Apple source name
 - ErmaC : Rename decompress_lzvn function to lzvn_decode follow Apple source name.
 - ErmaC : Add more chameleon UI stuff (default) made by blackosx
